@@ -1,3 +1,14 @@
+Tue Feb 23 18:55:21 UTC 2010  Yan Dai  <dai_y@ociweb.com>
+
+        * bin/tao_orb_tests.lst:
+
+          Added Bug_3812_Regression as not fixed test.
+          
+        * tests/Bug_3812_Regression/Bug_3812_Regression.cpp:
+        * tests/Bug_3812_Regression/mock_transport.h:
+        
+          Fixed fuzz errors.
+
 Tue Feb 23 10:35:39 UTC 2010  Vladimir Zykov  <vladimir.zykov@prismtech.com>
 
         * tao/TAO_Internal.cpp:
